Added some unit test.